login redirect un commented

--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,9 +1,9 @@
 <div class="p-2">
   <span class='page-title'> User Profile </span>
 
-  <mat-horizontal-stepper labelPosition="bottom" #stepper class="p-2">
+  <mat-horizontal-stepper labelPosition="bottom" #stepper class="p-2" >
     <form [formGroup]="UserForm" class="form">
-      <mat-step>
+      <mat-step [completed]="false">
         <ng-template matStepLabel><span class="stepperHeading">Personal details</span></ng-template>
         <div class="grid-style">
           <div></div>
@@ -66,7 +66,7 @@
           <div></div>
         </div>
       </mat-step>
-      <mat-step>
+      <mat-step [completed]="false">
         <ng-template matStepLabel><span class="stepperHeading">Bank account details</span></ng-template>
         <div class="grid-style">
           <div></div>
@@ -107,7 +107,7 @@
           <div></div>
         </div>
       </mat-step>
-      <mat-step>
+      <mat-step [completed]="false">
         <ng-template matStepLabel><span class="stepperHeading">Payout split ratio</span></ng-template>
         <p>Payout split ratio.</p>
         <!-- <div>
@@ -116,7 +116,7 @@
       </div> -->
       </mat-step>
 
-      <mat-step>
+      <mat-step [completed]="false">
         <ng-template matStepLabel><span class="stepperHeading">Documents Upload</span></ng-template>
         <div class="grid-style">
           <div></div>
