Styling changes for change password page

--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -1,7 +1,6 @@
-<div class="grid-style">
-  <div></div>
-  <div>
-    <span class='page-title'> Change Password </span>
+<div class="col-md-6 offset-md-3 mt-5">
+  <div class="card">
+    <div class="header">Change Password</div>
     <mat-card>
       <form [formGroup]="PasswordForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -36,9 +35,6 @@
         </button>
       </form>
     </mat-card>
-    <!-- <div class="justify-content-end">
-      <button class="app-button margin-top5" (click)="SaveUser()">Create User</button>
-    </div> -->
+
+    <div></div>
   </div>
-  <div></div>
-</div>
