--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,3 +152,10 @@ mat-toolbar {
 
 
 
+.header {
+  background-color: $background-color;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  font-weight: bold;
+}
