--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -29,10 +29,11 @@
             </div>
           </div>
         </div>
-
-        <button class="app-button">
-          Save
-        </button>
+        <div class="btn-style">
+          <button class="app-button ">
+            Save
+          </button>
+        </div>
       </form>
     </mat-card>
 
