--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -5,28 +5,33 @@
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.username.errors }" />
+                    <input type="text" formControlName="username" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && form.username.errors }" />
                     <div *ngIf="submitted && form.username.errors" class="invalid-feedback">
                         <div *ngIf="form.username.errors.required">Username is required</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
+                    <input type="password" formControlName="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
                     <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
                         <div *ngIf="form.password.errors.required">Password is required</div>
                     </div>
                 </div>
-                <button [disabled]="loading" class="app-button">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
-                </button>
+                <div class="btn-style">
+                    <button [disabled]="loading" class="app-button">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                        Login
+                    </button>
+                </div>
                 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             </form>
         </div>
     </div>
 </div>
 
+<br />
 <!-- <div style="background-color: #172b4d ;color: white;text-align: center;font-weight: bold;">
   VCIPL
 </div>
