--- a/src/styles.scss
+++ b/src/styles.scss
@@ -158,4 +158,6 @@ mat-toolbar {
   padding: 1rem;
   text-align: center;
   font-weight: bold;
+  border-radius: 8px 8px 0px 0px;
+  font-size: 1.5rem;
 }
