--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -23,7 +23,7 @@ Documents upload
 <div class="grid-style">
   <div></div>
   <div>
-    <span class='page-title'> Create New User </span>
+    <div class="mt-2 mb-2"><span class='page-title'> Create New User </span></div>
     <mat-card>
       <form [formGroup]="UserForm" class="form" novalidate>
         <div class="flexcolumn">
@@ -73,6 +73,7 @@ Documents upload
         </div>
       </form>
     </mat-card>
+    <br />
     <div class="justify-content-end">
       <button class="app-button margin-top5" (click)="SaveUser()">Create User</button>
     </div>
