--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="p-2">
+<div class="page-content">
   <span class = 'page-title'>Dashboard </span>
   <ag-grid-angular style="width: 100%; height: 500px;"
   [gridOptions] = 'gridOptions' class="ag-theme-balham" [rowData]="rowData"
