--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -19,10 +19,10 @@
           <mat-icon>account_circle</mat-icon>
           <span (click)='goToMyProfile()'>My Profile</span>
         </button>
-        <button mat-menu-item disabled>
+        <!-- <button mat-menu-item disabled>
           <mat-icon>voicemail</mat-icon>
           <span (click)='logout()'>Check voice mail</span>
-        </button>
+        </button> -->
         <button mat-menu-item>
           <mat-icon>notifications_off</mat-icon>
           <span (click)='logout()'>Logout</span>
