--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,19 +13,16 @@
 
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
         <mat-icon class="white-color">account_circle</mat-icon>
+        <span style="color: white; font-weight: bold;padding-left: ;"> {{ userService?.loggedInUser?.UserName }} </span>
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>
           <mat-icon>account_circle</mat-icon>
           <span (click)='goToMyProfile()'>My Profile</span>
         </button>
-        <!-- <button mat-menu-item disabled>
-          <mat-icon>voicemail</mat-icon>
-          <span (click)='logout()'>Check voice mail</span>
-        </button> -->
         <button mat-menu-item>
           <mat-icon>notifications_off</mat-icon>
-          <span (click)='logout()'>Logout</span>
+          <span  (click)='logout()'>Logout</span>
         </button>
       </mat-menu>
 
