--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -3,7 +3,7 @@
     <div class="header">Change Password</div>
     <mat-card>
       <form [formGroup]="PasswordForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
+        <div class="myform-field">
           <label for="oldPassword">Old Password</label>
           <input type="text" formControlName="oldPassword" class="form-control"
             [ngClass]="{ 'is-invalid': submitted && f.oldPassword.errors }" />
@@ -11,7 +11,7 @@
             <div *ngIf="f.oldPassword.errors.required">Username is required</div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="myform-field">
           <label for="newPassword">New Password</label>
           <input type="password" formControlName="newPassword" class="form-control"
             [ngClass]="{ 'is-invalid': submitted && f.newPassword.errors }" />
@@ -19,7 +19,7 @@
             <div *ngIf="f.newPassword.errors.required">Password is required</div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="myform-field">
           <label for="confirmPassword">Confirm Password</label>
           <input type="password" formControlName="confirmPassword" class="form-control"
             [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors || (f.confirmPassword.errors  && f.confirmPassword.errors.ConfirmPassword ) }" />
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="btn-style">
-          <button class="app-button ">
+          <button class="app-button">
             Save
           </button>
         </div>
