--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -85,7 +85,7 @@
   </mat-horizontal-stepper>
 
   <div class="justify-content-end pr-2">
-    <button class='app-button' (click)="save()">Save</button>
+    <button class='app-button' (click)="save()">Submit</button>
   </div>
 
 </div>
