--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -14,8 +14,9 @@
       <div class="flexrow">
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon class="white-color" [matMenuTriggerFor]="menu">account_circle</mat-icon>
-          <span style="color: white; font-weight: bold;"> {{ userService?.loggedInUser?.UserName }}
+          <span style="color: white; font-weight: bold;font-variant-caps: all-petite-caps"> {{ userService?.loggedInUser?.UserName }}
           </span>
+          <mat-icon class="white-color">keyboard_arrow_down</mat-icon>
         </button>
       </div>
       <mat-menu #menu="matMenu">
