--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -22,9 +22,9 @@
     </div>
 
     <div class="myform-field">
-      <label for="roles">Role</label>
-      <select formControlName="roles" placeholder="-- Select --" id="roles" class="form-control">
-        <option *ngFor="let role of roles" [value]="role.id">{{ role.roleName }}</option>
+      <label for="Roles">Role</label>
+      <select formControlName="Roles" placeholder="-- Select --" id="Roles" class="form-control">
+        <option *ngFor="let role of Roles" [value]="role.id">{{ role.roleName }}</option>
       </select>
     </div>
 
