--- a/src/app/component/app-root/app-root.component.html
+++ b/src/app/component/app-root/app-root.component.html
@@ -1,48 +1,14 @@
-<app-header (toggleMenu)="sidenav.open()"></app-header>
-<mat-sidenav-container>
-  <mat-sidenav #sidenav [attr.role]="isHandset ? 'dialog' : 'navigation'"
-    [opened]="!isHandset" class="bgcolor" [mode]="isHandset ? 'over' : 'side'">
-    <app-side-menu-bar (closeSplitPane)="CloseSplitPane($event)"></app-side-menu-bar>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <div style="height: 90vh;">
-      <router-outlet></router-outlet>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<!-- header -->
+<div class="header1-layout bgcolor">
+  <app-header (toggleMenu)="CloseSplitPane($event)"></app-header>
+</div>
 
-<!-- <div>
-  <div class="header1-layout bgcolor">
-    <div class="layout-container " style="display: flex; justify-content: space-between">
-      <div (click)="onClick($event)">
-        <mat-icon class="white-color" *ngIf="isHandset">menu</mat-icon>
-      </div>
-      <div>
-        <span>Sales App</span>
-      </div>
-      <div>
-        <mat-icon>account_circle</mat-icon>
-        <span>My Profile</span>
-      </div>
-    </div>
-  </div>
+<!-- SideMenu -->
+<div class="layout-sidemenu header1-layout bgcolor" #active>
+  <app-side-menu-bar></app-side-menu-bar>
+</div>
 
-  <div class="layout-sidemenu header1-layout">
-    <div *ngFor="let menu of MenuLinks">
-      {{menu.title}}
-      <div *ngIf="menu.SubMenu != null ">
-        <div *ngFor="let submenu of menu.SubMenu">
-          <span (click)="NavigateToPage(submenu.PageUrl)">
-            {{submenu.title}}
-          </span>
-
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
-</div> -->
+<!-- Content  -->
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
