--- a/src/app/component/app-root/app-root.component.scss
+++ b/src/app/component/app-root/app-root.component.scss
@@ -4,52 +4,61 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  height: 70px;
+  height: 50px;
 }
 
-.layout-container {
-  height: 100%;
-  color: #fff;
-  font-weight: 700;
-  font-size: 20px;
+.content {
+  margin-top: 60px !important;
+  margin-left: 230px !important;
+}
+
+@media only screen and (max-width: 900px) {
+  .content {
+    margin-top: 60px !important;
+    margin-left: 0px !important;
+  }
 }
 
 .layout-top {
-  top: 70px !important;
+  top: 50px !important;
 }
 
 .layout-sidemenu {
-  top: 70px !important;
-  height: calc(100% - 70px) !important;
+  top: 50px !important;
+  height: calc(100% - 50px) !important;
   overflow-y: auto;
-  width: 300px;
+  width: 230px;
   border-right: 1px solid #0000002e;
 }
 
-@media only screen and (min-width: 0px) {
-  // @import "xsmall";
+.layout-sidemenu {
+  top: 50px !important;
+  height: calc(100% - 50px) !important;
+  overflow-y: auto;
+  width: 230px;
+  border-right: 1px solid #0000002e;
 }
 
-@media only screen and (max-width: 599px) {
+@media only screen and (max-width: 900px) {
   .layout-sidemenu {
     top: 100px;
-    left: -300px !important;
+    left: -230px !important;
     z-index: 9999;
   }
 }
+
+@media only screen and (max-width: 900px) {
+  .layout-sidemenu .active {
+    top: 100px;
+    height: calc(100% - 50px);
+  }
+}
+
 .layout-sidemenu .active {
   transition: left 0.2s;
   z-index: 9999;
 }
 
-.content {
-  margin-top: 70px !important;
-  margin-left: 300px !important;
-}
-
-@media only screen and (max-width: 599px) {
-  .content {
-    margin-top: 70px !important;
-    margin-left: 0px !important;
-  }
+.layout-sidebar.active {
+  left: 0;
 }
