--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,36 +1,32 @@
-<mat-toolbar class="bgcolor">
-    <div style="width: 95%; display: flex; justify-content: space-between;padding: .5rem; align-items: center; position: fixed!important;
-    left: 0;">
-    <div *ngIf="isHandset$ | async" (click)="ToggleSideMenu()">
-      <mat-icon class="white-color">menu</mat-icon>
-    </div>
-    <div clas="white-color" style="color: white; font-weight: bold;">
-      VCIPL
-    </div>
-    <div *ngIf="!(isHandset$ | async)">
-      <span class="white-color">Sales App</span>
-    </div>
-    <div>
-      <div class="flexrow">
-        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-          <mat-icon class="white-color" [matMenuTriggerFor]="menu">account_circle</mat-icon>
-          <span style="color: white; font-weight: bold;font-variant-caps: all-petite-caps"> {{ userService?.loggedInUser?.Name }}
-          </span>
-          <mat-icon class="white-color">keyboard_arrow_down</mat-icon>
-        </button>
-      </div>
-      <mat-menu #menu="matMenu">
-        <button (click)='goToMyProfile()' mat-menu-item>
-          <mat-icon>account_circle</mat-icon>
-          <span >My Profile</span>
-        </button>
-        <button (click)='logout()' mat-menu-item>
-          <mat-icon>notifications_off</mat-icon>
-          <span >Logout</span>
-        </button>
-      </mat-menu>
-
-    </div>
-
+<div class="layout-container" style="display: flex; justify-content: space-between;align-items: center;">
+  <div class="span-vertical-center paddingright10" *ngIf="isHandset$ | async" (click)="ToggleSideMenu()">
+    <mat-icon class="white-color">menu</mat-icon>
   </div>
-</mat-toolbar>
+  <div class="flex-grow-1 white-color" *ngIf="!(isHandset$ | async)"> <span>VCIPL</span> </div>
+  <div class="flex-grow-1 white-color"> <span>Sales App</span> </div>
+  <div class="d-flex p-2 cursor white-color" [matMenuTriggerFor]="menu">
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <i class="material-icons icon-size">account_circle</i>
+    </button>
+    <div>
+      <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps" class="font1">
+        {{ userService?.loggedInUser?.Name }}
+      </div>
+      <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps" class="font1">
+        AWQD12FJ3301
+      </div>
+    </div>
+  </div>
+  <mat-menu #menu="matMenu">
+    <div class="accont-menu">
+      <div class="d-flex p-2" (click)='goToMyProfile()'>
+        <mat-icon>account_circle</mat-icon>
+        <span class="span-vertical-center">My Profile</span>
+      </div>
+      <div class="d-flex  p-2" (click)='logout()'>
+        <mat-icon>notifications_off</mat-icon>
+        <span class="span-vertical-center">Logout</span>
+      </div>
+    </div>
+  </mat-menu>
+</div>
