--- a/src/app/component/side-menu-bar/side-menu-bar.component.scss
+++ b/src/app/component/side-menu-bar/side-menu-bar.component.scss
@@ -6,5 +6,25 @@ app-side-menu-bar {
     color: #00c7e6 !important;
     background: rgba(0, 0, 0, 0.2);
   }
-}
 
+
+
+  .options {
+    min-height: 50px;
+    align-items: center;
+    font-size: 15px;
+    padding: 10px;
+  }
+
+  .options:hover {
+    background: #06062e;
+  }
+
+  .padding-right10 {
+    padding: 6px 10px 0px 0px;
+  }
+
+  .suboption {
+    padding-left: 15%;
+  }
+}
