--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="layout-container" style="display: flex; justify-content: space-between;align-items: center;">
-  <div class="span-vertical-center paddingright10" *ngIf="isHandset$ | async" (click)="ToggleSideMenu()">
+  <div class="span-vertical-center paddingright10 cursor" *ngIf="isHandset$ | async" (click)="ToggleSideMenu()">
     <mat-icon class="white-color">menu</mat-icon>
   </div>
   <div class="flex-grow-1 white-color" *ngIf="!(isHandset$ | async)"> <span>VCIPL</span> </div>
@@ -9,11 +9,9 @@
       <i class="material-icons icon-size">account_circle</i>
     </button>
     <div>
-      <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps" class="font1">
+      <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps;font-size: 1rem;"
+        class="span-vertical-center">
         {{ userService?.loggedInUser?.Name }}
-      </div>
-      <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps" class="font1">
-        AWQD12FJ3301
       </div>
     </div>
   </div>
@@ -24,7 +22,7 @@
         <span class="span-vertical-center">My Profile</span>
       </div>
       <div class="d-flex  p-2" (click)='logout()'>
-        <mat-icon>notifications_off</mat-icon>
+        <mat-icon>exit_to_app</mat-icon>
         <span class="span-vertical-center">Logout</span>
       </div>
     </div>
