--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -41,22 +41,22 @@
 
         <div class="myform-field">
           <label for="AcNo">Account Number</label>
-          <input type="text" formControlName="AccountNumber" placeholder="Enter Account Number" class="form-control" id="AcNo">
+          <input type="text" formControlName="accountNumber" placeholder="Enter Account Number" class="form-control" id="AcNo">
         </div>
 
         <div class="myform-field">
           <label for="Name">Name (as per Bank details)</label>
-          <input type="text" formControlName="NameInBank" placeholder="Enter Name" class="form-control" id="Name">
+          <input type="text" formControlName="nameInBank" placeholder="Enter Name" class="form-control" id="Name">
         </div>
 
         <div class="myform-field">
           <label for="IFSC">IFSC Code</label>
-          <input type="text" formControlName="IFSCCode" placeholder="Enter IFSC Code" class="form-control" id="IFSC">
+          <input type="text" formControlName="ifscCode" placeholder="Enter IFSC Code" class="form-control" id="IFSC">
         </div>
 
         <div class="myform-field">
           <label for="BankName">Bank Name</label>
-          <input type="text" formControlName="BankName" placeholder="BankName" class="form-control" id="BankName">
+          <input type="text" formControlName="bankName" placeholder="BankName" class="form-control" id="BankName">
         </div>
 
       </mat-step>
