--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -11,7 +11,7 @@
     <div>
       <div style="color: white; font-weight: bold;font-variant-caps: all-petite-caps;font-size: 1rem;"
         class="span-vertical-center">
-        {{ userService?.loggedInUser?.Name }}
+        {{ currentUser?.name }}
       </div>
     </div>
   </div>
